bump sbt version and plugins (#14)
* bump sbt version and plugins

* add jvm 17

* remove invalid jvm setting

* bump test sbt versions