@@ -18,7 +18,6 @@ lazy val testSettings: Seq[Setting[_]] = Seq(
   scriptedLaunchOpts := {
     scriptedLaunchOpts.value ++ Seq(
       "-Xmx1024M",
-      "-XX:MaxPermSize=256M",
       "-Dplugin.version=" + version.value
     )
   },
